--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^5.7.2",
     "fs": "*",
     "history": "^5.3.0",
+    "rc-progress": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4",
