--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,10 +8,10 @@
       "default_title": "Open the popup"
   },
   "commands": {
-      "_execute_browser_action": {
+      "_execute_action": {
           "suggested_key": {
               "default": "Ctrl+Shift+S",
-              "mac": "MacCtrl+Shift+S"
+              "mac": "Command+Shift+K"
           },
           "description": "Open the popup"
       }
