--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "history": "^5.3.0",
     "rc-progress": "^3.4.1",
     "react": "^18.2.0",
+    "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
