Improve UI of FAQ and of the account page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,7 +17,7 @@
       }
   },
   "permissions": [
-    "activeTab", "scripting"
+    "activeTab", "scripting", "management"
   ],
   "externally_connectable": {
       "matches": ["*://*/*"]
