--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react": "^18.2.0",
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-fade-in": "^2.0.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^2.1.2",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
