--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
   "commands": {
       "_execute_action": {
           "suggested_key": {
-              "default": "Ctrl+Shift+S",
+              "default": "Ctrl+Shift+K",
               "mac": "Command+Shift+K"
           },
           "description": "Open the popup"
