--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MetaScan",
+  "name": "CryptoHelm",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-type-animation": "^2.1.2",
+    "tailwindcss-neumorphism": "^0.1.0",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
