--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-#REACT_APP_SERVER_URL=https://cryptohelmnode-3npc2uvlhq-no.a.run.app
-REACT_APP_SERVER_URL=http://localhost:8080
+REACT_APP_SERVER_URL=https://cryptohelmnode-3npc2uvlhq-no.a.run.app
+#REACT_APP_SERVER_URL=http://localhost:8080
 
